--- a/VListen/app/src/main/res/layout/group_recommendation.xml
+++ b/VListen/app/src/main/res/layout/group_recommendation.xml
@@ -17,8 +17,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="60dp"
-            >
+            android:layout_marginTop="60dp">
 
 
             <LinearLayout
