--- a/VListen/app/src/main/res/layout/dummy_create_post.xml
+++ b/VListen/app/src/main/res/layout/dummy_create_post.xml
@@ -30,8 +30,18 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginTop="624dp"
-            android:layout_marginEnd="158dp"
+            android:layout_marginEnd="277dp"
             android:layout_marginBottom="59dp"
             android:text="Send" />
+
+        <Button
+            android:id="@+id/postCheerButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="64dp"
+            android:layout_marginBottom="58dp"
+            android:text="Post Cheer Button" />
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
