--- a/VListen/app/src/main/res/layout/dummy_create_cheer.xml
+++ b/VListen/app/src/main/res/layout/dummy_create_cheer.xml
@@ -10,28 +10,37 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="-143dp">
 
+
         <EditText
             android:id="@+id/postText"
-            android:layout_width="330dp"
-            android:layout_height="wrap_content"
+            android:layout_width="367dp"
+            android:layout_height="200dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="454dp"
-            android:layout_marginEnd="39dp"
-            android:layout_marginBottom="136dp"
+            android:layout_marginTop="312dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginBottom="219dp"
             android:text="TextView" />
-
-
 
         <Button
             android:id="@+id/postCheerButton"
-            android:layout_width="wrap_content"
+            android:layout_width="319dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="64dp"
-            android:layout_marginBottom="58dp"
+            android:layout_marginEnd="55dp"
+            android:layout_marginBottom="150dp"
             android:text="Post Cheer" />
+
+        <Button
+            android:id="@+id/goToCheerBoard"
+            android:layout_width="315dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="58dp"
+            android:layout_marginBottom="72dp"
+            android:text="Cheer Board" />
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
